[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://Main/Geologica.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main/Files/ProductSans.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Main/ButtonHover.tres" type="StyleBox" id=4]
[ext_resource path="res://Main/ButtonPressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Main/ButtonNormal.tres" type="StyleBox" id=6]
[ext_resource path="res://Main/ProductSans.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sounds/Open_sound.tscn" type="PackedScene" id=8]
[ext_resource path="res://Main/UIicons/RUS.png" type="Texture" id=9]
[ext_resource path="res://Main/UIicons/Checked.png" type="Texture" id=10]
[ext_resource path="res://Main/UIicons/Crossed.png" type="Texture" id=11]
[ext_resource path="res://Main/UIicons/Music_icon_on.png" type="Texture" id=12]
[ext_resource path="res://Main/Files/WallMin.jpg" type="Texture" id=13]
[ext_resource path="res://Scenes/Transition.tscn" type="PackedScene" id=14]
[ext_resource path="res://Main/UIicons/Sound_icon_on.png" type="Texture" id=15]
[ext_resource path="res://Main/UIicons/Sound_icon_off.png" type="Texture" id=16]
[ext_resource path="res://Main/UIicons/Music_icon_off.png" type="Texture" id=17]
[ext_resource path="res://Sounds/MenuMusic.tscn" type="PackedScene" id=18]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.529412, 0.643137, 1, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.380392, 0.407843, 0.992157, 1 )
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 20

[sub_resource type="DynamicFont" id=4]
size = 75
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.258824, 0.713726, 0.843137, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.627451, 0.878431, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=6]
size = 65
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 65
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0.345098, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0352941, 0, 0.615686, 1 )
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.52549, 0.603922, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.192157, 0.996078, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="DynamicFont" id=9]
size = 60
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
script = ExtResource( 1 )

[node name="Transition" parent="." instance=ExtResource( 14 )]

[node name="BackGround" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 13 )
__meta__ = {
"_editor_description_": ""
}

[node name="Blackout" type="ColorRect" parent="BackGround"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.290196 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = -2
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 50.0
margin_top = -2.0
margin_right = 1870.0
margin_bottom = 1030.0

[node name="Title" type="MarginContainer" parent="Margin/VBox"]
margin_right = 1820.0
margin_bottom = 189.0

[node name="Label" type="Label" parent="Margin/VBox/Title"]
margin_right = 1820.0
margin_bottom = 189.0
custom_fonts/font = ExtResource( 2 )
text = "id_settingstitle"
align = 1

[node name="Grid" type="GridContainer" parent="Margin/VBox"]
margin_top = 193.0
margin_right = 1820.0
margin_bottom = 1032.0
size_flags_vertical = 3
custom_constants/vseparation = -84
custom_constants/hseparation = 80
columns = 2

[node name="Language" type="VBoxContainer" parent="Margin/VBox/Grid"]
margin_right = 870.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 7

[node name="Margin" type="MarginContainer" parent="Margin/VBox/Grid/Language"]
margin_right = 870.0
margin_bottom = 106.0
custom_constants/margin_top = 8

[node name="Label" type="Label" parent="Margin/VBox/Grid/Language/Margin"]
margin_top = 8.0
margin_right = 870.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
text = "id_langtitle"
align = 1

[node name="Language" type="Button" parent="Margin/VBox/Grid/Language"]
margin_top = 113.0
margin_right = 870.0
margin_bottom = 231.0
focus_neighbour_top = NodePath("../../../../../Back")
focus_neighbour_right = NodePath("../../Fps/Vsync")
focus_neighbour_bottom = NodePath("../../Graphics/Shadow")
custom_constants/hseparation = 30
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = ExtResource( 6 )
text = "Русский"
icon = ExtResource( 9 )
align = 0

[node name="Fps" type="VBoxContainer" parent="Margin/VBox/Grid"]
margin_left = 950.0
margin_right = 1820.0
margin_bottom = 462.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="Label" type="Label" parent="Margin/VBox/Grid/Fps"]
margin_right = 870.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "Fps"
align = 1

[node name="Vsync" type="CheckBox" parent="Margin/VBox/Grid/Fps"]
margin_top = 113.0
margin_right = 870.0
margin_bottom = 231.0
focus_neighbour_left = NodePath("../../Language/Language")
focus_neighbour_bottom = NodePath("../../Sounds/Sound/S_Mute")
size_flags_vertical = 5
custom_fonts/font = ExtResource( 7 )
custom_icons/checked = ExtResource( 10 )
custom_icons/unchecked = ExtResource( 11 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 15 )
custom_styles/hover_pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
pressed = true
text = "V-sync"

[node name="TargetFps" type="HBoxContainer" parent="Margin/VBox/Grid/Fps"]
margin_top = 246.0
margin_right = 870.0
margin_bottom = 347.0
custom_constants/separation = -2

[node name="Label" type="Label" parent="Margin/VBox/Grid/Fps/TargetFps"]
margin_top = 1.0
margin_right = 416.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "id_targetfps"
align = 1

[node name="LineEdit" type="LineEdit" parent="Margin/VBox/Grid/Fps/TargetFps"]
margin_left = 644.0
margin_right = 870.0
margin_bottom = 101.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 10 )
text = "60"
align = 1
max_length = 3
context_menu_enabled = false
middle_mouse_paste_enabled = false

[node name="Graphics" type="VBoxContainer" parent="Margin/VBox/Grid"]
margin_top = 378.0
margin_right = 870.0
margin_bottom = 839.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 18

[node name="Label" type="Label" parent="Margin/VBox/Grid/Graphics"]
margin_right = 870.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "id_graphtitle"
align = 1

[node name="Shadow" type="CheckBox" parent="Margin/VBox/Grid/Graphics"]
margin_top = 116.0
margin_right = 870.0
margin_bottom = 216.0
focus_neighbour_top = NodePath("../../Language/Language")
focus_neighbour_bottom = NodePath("../Sky")
size_flags_vertical = 5
custom_fonts/font = SubResource( 6 )
custom_icons/checked = ExtResource( 10 )
custom_icons/unchecked = ExtResource( 11 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 15 )
custom_styles/hover_pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
pressed = true
text = "id_shadow"

[node name="Sky" type="CheckBox" parent="Margin/VBox/Grid/Graphics"]
margin_top = 234.0
margin_right = 870.0
margin_bottom = 334.0
focus_neighbour_top = NodePath("../Shadow")
focus_neighbour_bottom = NodePath("../Fullscreen")
size_flags_vertical = 5
custom_fonts/font = SubResource( 7 )
custom_icons/checked = ExtResource( 10 )
custom_icons/unchecked = ExtResource( 11 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 15 )
custom_styles/hover_pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
pressed = true
text = "id_sky"

[node name="Fullscreen" type="CheckBox" parent="Margin/VBox/Grid/Graphics"]
margin_top = 352.0
margin_right = 870.0
margin_bottom = 452.0
focus_neighbour_top = NodePath("../Sky")
focus_neighbour_bottom = NodePath("../../../../../Back")
size_flags_vertical = 5
custom_fonts/font = SubResource( 7 )
custom_icons/checked = ExtResource( 10 )
custom_icons/unchecked = ExtResource( 11 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 15 )
custom_styles/hover_pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
pressed = true
text = "id_fullscreen"

[node name="Sounds" type="VBoxContainer" parent="Margin/VBox/Grid"]
margin_left = 950.0
margin_top = 378.0
margin_right = 1820.0
margin_bottom = 839.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 7

[node name="Label" type="Label" parent="Margin/VBox/Grid/Sounds"]
margin_right = 870.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = "id_soundtitle"
align = 1

[node name="Sound" type="HBoxContainer" parent="Margin/VBox/Grid/Sounds"]
margin_top = 105.0
margin_right = 870.0
margin_bottom = 221.0
custom_constants/separation = 57

[node name="Label" type="Label" parent="Margin/VBox/Grid/Sounds/Sound"]
margin_top = 9.0
margin_right = 199.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
text = "id_sfx"
valign = 1

[node name="Scroll" type="MarginContainer" parent="Margin/VBox/Grid/Sounds/Sound"]
margin_left = 256.0
margin_right = 697.0
margin_bottom = 116.0
size_flags_horizontal = 11
custom_constants/margin_right = -25
custom_constants/margin_top = 39
custom_constants/margin_left = -37
custom_constants/margin_bottom = 28

[node name="S_HScroll" type="HScrollBar" parent="Margin/VBox/Grid/Sounds/Sound/Scroll"]
margin_left = -37.0
margin_top = 39.0
margin_right = 466.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/grabber_highlight = SubResource( 13 )
custom_styles/grabber = SubResource( 13 )
custom_styles/scroll = ExtResource( 6 )
custom_styles/grabber_pressed = SubResource( 14 )
min_value = -30.0
max_value = 6.0
page = 1.0
value = -30.0
rounded = true

[node name="S_Mute" type="CheckBox" parent="Margin/VBox/Grid/Sounds/Sound"]
margin_left = 754.0
margin_right = 870.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../../../Fps/Vsync")
focus_neighbour_bottom = NodePath("../../Music/M_Mute")
custom_icons/checked = ExtResource( 15 )
custom_icons/unchecked = ExtResource( 16 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 15 )
custom_styles/hover_pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )

[node name="Music" type="HBoxContainer" parent="Margin/VBox/Grid/Sounds"]
margin_top = 228.0
margin_right = 870.0
margin_bottom = 344.0

[node name="Label" type="Label" parent="Margin/VBox/Grid/Sounds/Music"]
margin_top = 9.0
margin_right = 302.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
text = "id_music"
align = 1

[node name="Scroll" type="MarginContainer" parent="Margin/VBox/Grid/Sounds/Music"]
margin_left = 306.0
margin_right = 750.0
margin_bottom = 116.0
size_flags_horizontal = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 39
custom_constants/margin_left = 12
custom_constants/margin_bottom = 28

[node name="M_HScroll" type="HScrollBar" parent="Margin/VBox/Grid/Sounds/Music/Scroll"]
margin_left = 12.0
margin_top = 39.0
margin_right = 419.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_styles/grabber_highlight = SubResource( 13 )
custom_styles/grabber = SubResource( 13 )
custom_styles/scroll = ExtResource( 6 )
custom_styles/grabber_pressed = SubResource( 14 )
min_value = -30.0
max_value = 6.0
page = 1.0
rounded = true

[node name="M_Mute" type="CheckBox" parent="Margin/VBox/Grid/Sounds/Music"]
margin_left = 754.0
margin_right = 870.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../../Sound/S_Mute")
focus_neighbour_bottom = NodePath("../../../Fps/Vsync")
custom_icons/checked = ExtResource( 12 )
custom_icons/unchecked = ExtResource( 17 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = SubResource( 15 )
custom_styles/hover_pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
pressed = true

[node name="Back" type="Button" parent="."]
margin_left = 26.0
margin_top = 16.0
margin_right = 312.0
margin_bottom = 110.0
focus_neighbour_bottom = NodePath("../Margin/VBox/Grid/Language/Language")
custom_colors/font_color_hover = Color( 0.741176, 0.960784, 0.996078, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 1, 0.756863, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = SubResource( 15 )
custom_styles/normal = ExtResource( 6 )
text = "id_settingback"

[node name="InGameAlert" type="Label" parent="."]
visible = false
margin_left = 1052.0
margin_top = 975.0
margin_right = 1938.0
margin_bottom = 1061.0
custom_colors/font_color = Color( 1, 0.0509804, 0.0509804, 1 )
custom_fonts/font = SubResource( 12 )
text = "id_ingamealert"

[node name="Open_sound" parent="." instance=ExtResource( 8 )]

[node name="MenuMusic" parent="." instance=ExtResource( 18 )]

[connection signal="pressed" from="Margin/VBox/Grid/Language/Language" to="." method="_on_Language_pressed"]
[connection signal="pressed" from="Margin/VBox/Grid/Fps/Vsync" to="." method="_on_Vsync_pressed"]
[connection signal="pressed" from="Margin/VBox/Grid/Graphics/Shadow" to="." method="_on_Shadow_pressed"]
[connection signal="pressed" from="Margin/VBox/Grid/Graphics/Sky" to="." method="_on_Sky_pressed"]
[connection signal="pressed" from="Margin/VBox/Grid/Graphics/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="value_changed" from="Margin/VBox/Grid/Sounds/Sound/Scroll/S_HScroll" to="." method="_on_S_HScroll_value_changed"]
[connection signal="pressed" from="Margin/VBox/Grid/Sounds/Sound/S_Mute" to="." method="_on_S_Mute_pressed"]
[connection signal="value_changed" from="Margin/VBox/Grid/Sounds/Music/Scroll/M_HScroll" to="." method="_on_M_HScroll_value_changed"]
[connection signal="pressed" from="Margin/VBox/Grid/Sounds/Music/M_Mute" to="." method="_on_M_Mute_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
